--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <style>
     body {
       font-size: x-large;
+      font-family: sans-serif;
     }
 
     .sans-serif {
@@ -40,11 +41,21 @@
       Examples
     </summary>
     <div class="examples-wrapper">
-
     </div>
   </details>
   <input type="text" id="domain" placeholder="Enter your domain name" autofocus>
-  <div id="output"></div>
+  <table>
+    <thead>
+      <tr>
+        <th>Domain</th>
+        <th>Link (sans-serif)</th>
+        <th>Link (serif)</th>
+        <th>Link (uppercase)</th>
+        <th>Link (uppercase serif)</th>
+      </tr>
+    </thead>
+    <tbody id="output"></tbody>
+  </table>
 </body>
 
 </html>
@@ -70,6 +81,8 @@
       .catch(error => console.log(error));
   }
 
+
+
   const isValidTld = function (domain) {
     return tlds.includes(domain.split('.').pop())
   }
@@ -77,14 +90,21 @@
   console.assert(isValidTld('google.con') === false)
   console.assert(isValidTld('google.com') === true)
   const generateLink = function (domain) {
-    return isValidTld(domain) ? `<a class="sans-serif" href="http://${domain}" target="_blank">${domain}</a> <a class="serif" href="http://${domain}" target="_blank">${domain}</a> <a class="uppercase" href="http://${domain}" target="_blank">${domain}</a> ` : 'Invalid TLD'
+    return isValidTld(domain) ? `
+    <td><a class="sans-serif" href="http://${domain}" target="_blank">${domain}</a></td>
+    <td><a class="serif" href="http://${domain}" target="_blank">${domain}</a></td> 
+    <td><a class="uppercase" href="http://${domain}" target="_blank">${domain}</a></td>
+    <td><a class="uppercase serif" href="http://${domain}" target="_blank">${domain}</a></td>
+  ` : 'Invalid TLD'
   }
 
-  if (window.location.search) {
-    const urlParams = new URLSearchParams(window.location.search);
-    document.getElementById('domain').value = urlParams.get('domain');
-    generateSimilarDomains();
+  const renderSimilarDomains = function (similarDomains) {
+    return similarDomains
+      .filter(similarDomain => isValidTld(similarDomain))
+      .map(similarDomain => `<tr><td><code>${similarDomain}</code></td>${generateLink(similarDomain)}</tr>`).join('')
   }
+
+
 
 
   function generateSimilarDomains() {
@@ -251,13 +271,17 @@
     }
 
     // Display the generated domain names
-    output.innerHTML = similarDomains
-      .filter(similarDomain => isValidTld(similarDomain))
-      .map(similarDomain => `<code>${similarDomain}</code> - ${generateLink(similarDomain)}`)
-      .join('<br>');
+    output.innerHTML = renderSimilarDomains(similarDomains);
   }
 
-  // Define the array of domain names
+  if (window.location.search) {
+    const urlParams = new URLSearchParams(window.location.search);
+    document.getElementById('domain').value = urlParams.get('domain');
+    generateSimilarDomains();
+  }
+
+
+
   var domains = [
     'google.com', 'facebook.com', 'netflix.com', 'amazon.com', 'microsoft.com', 'apple.com'
   ];
