--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <title>Domain Name Typo squatting shield</title>
+  <title>Domain Name Typo-squatting Shield</title>
   <script src="app.js"></script>
 </head>
 
@@ -31,7 +31,7 @@
       user-select: none;
     }
   </style>
-  <h1>Domain Name Typo squatting shield</h1>
+  <h1>Domain Name Typo-squatting Shield</h1>
   <p>
     A web app that allows you find similar domain names to your domain name to protect your brand from typo-squatting.
   </p>
